--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.6.0",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
