--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "bootstrap": "^4.1.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.2",
