--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.6.0",
     "socket.io": "^4.1.3",
