Added unit test cases for all services

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --code-coverage",
     "compodoc": "npx compodoc -p tsconfig.doc.json",
     "format:test": "prettier \"projects/**/*.{ts,html,md,scss,json}\" --list-different",
     "format:write": "prettier \"src/**/*.{ts,html,md,scss,json}\" --write",
@@ -26,9 +26,11 @@
     "bootstrap": "^4.1.3",
     "compodoc": "0.0.41",
     "font-awesome": "^4.7.0",
+    "mock-socket": "^9.0.3",
     "ngx-socket-io": "^3.2.0",
     "prettier": "^2.3.2",
     "rxjs": "~6.6.0",
+    "sinon": "^11.1.1",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "tslib": "^2.2.0",
@@ -45,6 +47,7 @@
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.2"
